--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.7
-  image_picker: ^1.0.4
+  image_picker:
   shared_preferences: ^2.2.1
-  snippet_coder_utils: ^1.0.14
+  snippet_coder_utils:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
