--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.7
+  google_fonts: ^5.1.0
   image_picker:
   shared_preferences: ^2.2.1
   snippet_coder_utils:
@@ -54,8 +55,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
