--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   image_picker:
   shared_preferences: ^2.2.1
   snippet_coder_utils:
+  smooth_page_indicator: ^1.1.0
+  conditional_builder_null_safety:
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -51,8 +54,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-flutter_native_splash:
-  background_image: "assets/splash.png"
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -70,12 +72,11 @@ flutter_native_splash:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Grandstander
+      fonts:
+        - asset: assets/fonts/Grandstander/Grandstander-Regular.otf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
@@ -84,3 +85,5 @@ flutter_native_splash:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_native_splash:
+  background_image: "assets/splash.png"
