--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   conditional_builder_null_safety:
   carousel_slider: ^4.2.1
+  pinput: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
