--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   conditional_builder_null_safety:
   carousel_slider: ^4.2.1
+  get: ^4.6.5
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
